rook-ceph/rook-ceph-dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: rook-ceph.internal.home.alan-jenkins.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: rook-ceph-dashboard
              servicePort: 80
